--- a/swift_github/View1/View1.storyboard
+++ b/swift_github/View1/View1.storyboard
@@ -28,6 +28,9 @@
                                 <rect key="frame" x="164" y="437" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="changeButton:" destination="hc5-Fh-ILt" eventType="touchUpInside" id="EbP-zu-iQC"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
